<resources>
    <string name="app_name">MControl</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_person">Pessoas</string>
    <string name="title_activity_edit_pessoa">EditPessoa</string>
    <string name="label_id">ID</string>
    <string name="label_name">Nome</string>
    <string name="label_mat">Matricula</string>
    <string name="label_mail">Email</string>
    <string name="action_save">Salvar</string>
    <string name="label_radio_professor">Professor</string>
    <string name="label_radio_aluno">Aluno</string>
    <string name="label_categoria">Categoria</string>
    <string name="title_activity_lista_pessoa">ListaPessoaActivity</string>
    <string name="title_activity_lista_evento">ListaEventoActivity</string>
    <string name="title_activity_edit_evento">EditEventoActivity</string>
    <string name="label_fot">Foto</string>
    <string name="action_cadastrar_pessoa">Cadastrar</string>
    <string name="action_search">Busca</string>
    <string name="title_activity_lista_evento_pessoa">ListaEventoPessoaActivity</string>
    <string name="action_cadastrar">Cadastrar</string>
    <string name="title_activity_edit_evento_pessoa">EditEventoPessoaActivity</string>
    <string name="action_encontro">Encontros</string>
    <string name="title_activity_lista_evento_encontro">Encontros de Evento</string>
    <string name="title_activity_edit_evento_encontro">EditEventoEncontroActivity</string>
    <string name="title_activity_lista_evento_encontro_presenca">
        ListaEventoEncontroPresencaActivity
    </string>
    <string name="title_activity_edit_presenca">EditPresencaActivity</string>
    <string name="title_activity_edit_presenca_confirm">EditPresencaConfirmActivity</string>
    <string name="action_export">Exportar</string>
    <string name="action_import">Importar Pessoas</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_edit_relatorio">EditRelatorioActivity</string>
</resources>
